--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </div>
 </header>
-<center><button class="button">New Word</button></center>
+<center><button class="button">Today's Word</button></center>
 <div class="quote"><span class = "saying"></span><br><span class = "author"></span></div>  
 <div>
 
