--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <link rel="stylesheet" type="text/css" href="main.css">
   <link re="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 <link re="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+<script src="https://code.jquery.com/jquery-1.12.3.js">
+</script>
+ <script src= "example.js">
+  
+  </script>
 <body>
 <!-- Header -->
 <header class="index-header">
